--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -93,6 +93,10 @@
                     <div class="skill-name">React</div>
                 </div>
                 <div class="skill-card">
+                    <div class="skill-icon"><img class="icon" src="svg/node-js.svg"></div>
+                    <div class="skill-name">Node js</div>
+                </div>
+                <div class="skill-card">
                     <div class="skill-icon"><img class="icon" src="svg/java-brands.svg"></div>
                     <div class="skill-name">JAVA</div>
                 </div>
